--- a/app/views/entities/_left_menu.html.erb
+++ b/app/views/entities/_left_menu.html.erb
@@ -3,7 +3,7 @@
     <li>Manage User</li>
     <li id="manage-menu-add">
         <input type="text"/>
-        <span><i class="icon-plus"></i> Group</span>
+        <span><i class="icon-plus"></i> Entity</span>
 
         <p class="manage-add-tooltip">Enter: confirm <br/>Esc: cancel</p>
     </li>
