--- a/app/views/kpis/_user_kpi.html.erb
+++ b/app/views/kpis/_user_kpi.html.erb
@@ -1,10 +1,10 @@
 <ul class="left">
      <%@user_kpis.each_with_index do |kpi,i|%>
-     <li id="<%= kpi.user_kpi_item_id%>">
+     <li id="<%= kpi.user_kpi_item_id%>" kpi_id="<%=kpi.id%>">
           <table>
               <tr>
                   <td title="<%= kpi.name%>"><%= kpi.name%></td>
-                  <td><input type="text" value="<%= kpi.target%>"/></td>
+                  <td><input type="text" value="<%= kpi.user_kpi_item_target%>" id="<%= kpi.user_kpi_item_id%>"/></td>
               </tr>
               <tr>
                   <td title="<%= kpi.description%>"><%= kpi.description%></td>
