--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -66,10 +66,10 @@
       </td>
     </tr>
   </table>
-  <div class="chooseChart-wrap clearfix">
-    <div class="choose-db-item db-chart-line pull-left" onclick="dashNew_chooseType(event)"><label>折线图</label></div>
-    <div class="choose-db-item db-chart-column pull-left" onclick="dashNew_chooseType(event)"><label>直方图</label></div>
-    <div class="choose-db-item db-chart-pie pull-left" onclick="dashNew_chooseType(event)"><label>饼图</label></div>
+  <div class="chooseChart-wrap clearfix" id="view-chart-type">
+    <div class="choose-db-item db-chart-line pull-left"  onclick="dashNew_chooseType(event)" style="background: #002a80"><label>折线图</label></div>
+    <div class="choose-db-item db-chart-column pull-left"onclick="dashNew_chooseType(event)" style="background: #002a80"><label>直方图</label></div>
+    <div class="choose-db-item db-chart-pie pull-left" onclick="dashNew_chooseType(event)" style="background: #002a80"><label>饼图</label></div>
   </div>
 
   <div class="chooseBtn-wrap clearfix">
