--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,7 +18,7 @@
         </div>
         <ul id="manage-sort-list" class="manage-sort-list">
             <%@users.each_with_index do |user,i|%>
-            <li id="<%= user.id%>">
+            <li id="<%= user.id%>" is_tenant="<%= user.is_tenant%>">
                 <p class="sort-handle">:</p>
                 <input type="checkbox"/>
                 <table class="group">
