--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,7 +17,7 @@
 *= require Analytic-main
 *= require font-awesome
 *= require aero
-*= require jquery.gridster.min
+*= require jquery.gridster
 *= require Manage
 *= require Manage-kpi
 *= require Manage-user
