dashboard=> add conditions

--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -150,7 +150,7 @@
   </div>
   -->
   <a class="btn btn-wzx btn-primary dashboard-addNew-btn" onclick="showDash_new()"><i class="icon-plus icon-white"></i> 视图</a>
-  <div class="gridster dashboard-block pull-left" style="width: 80%;">
+  <div class="gridster dashboard-block pull-left" style="width: 80%">
     <ul class="dashBoard-show" id="dashBoard-show">
       <!--<li data-row ="1" data-col="1" data-sizex="1" data-sizey="1" draggable="true" style="background-color: #16a085">
       </li>-->
