--- a/app/assets/stylesheets/Dashboard-add.css
+++ b/app/assets/stylesheets/Dashboard-add.css
@@ -96,6 +96,56 @@
     top:-1px;
     left:0px;
 }
+.dashboard-name{
+    display:inline-block;
+    position:relative;
+    color:rgba(0,0,0,0.35);
+    cursor:pointer;
+    margin:29px 0 31px;
+    transition:color 0.25s ease-out;
+    font-size:12px;
+    width:130px;
+    height:38px;
+    padding-left:15px;
+}
+.dashboard-name:hover p:first-of-type,.dashboard-name:hover i{
+    color:rgba(0,0,0,0.7);
+}
+.dashboard-name>p:first-of-type{
+    float:left;
+    margin:0 8px 0 0;
+    cursor:pointer;
+    font-size:20px;
+    transition:color 0.25s ease-out;
+    color:rgba(0,0,0,0.5);
+    max-width:130px;
+    display:block;
+    text-overflow:ellipsis;
+    overflow:hidden;
+    white-space:nowrap;
+}
+.dashboard-name>p:nth-of-type(2){
+    position:absolute;
+    left:15px;
+    top:25px;
+    margin:0;
+    transition:color 0.25s ease-out;
+}
+.dashboard-name>i{
+    float:left;
+    pointer-events:auto;
+    margin-top:6px;
+    transition:color 0.25s ease-out;
+    color:rgba(0,0,0,0.5);
+    position:absolute;
+}
+.dashboard-name+input[type='text']{
+    position:relative;
+    width:108px;
+    display:none;
+    top:9px;
+    margin:21px 0 46px 15px;
+}
 /********************************************************************************************************* 右边的草稿图
 *******************************************************************************************************************/
 .db-chart-body{
@@ -124,8 +174,8 @@
     height:44px;
     border:1px solid #ddd;
     margin-left:6px;
-    background-image:url("../images/db-chart-type.png");
-    /*background-image:url("/assets/db-chart-type.png");*/
+    /*background-image:url("../images/db-chart-type.png");*/
+    background-image:url("/assets/db-chart-type.png");
     background-repeat:no-repeat;
     cursor:pointer;
 }
