--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,6 +22,8 @@
 *= require Manage-kpi
 *= require Manage-user
 *= require Manage-view
+*= require Dashboard
+*= require Dashboard-add
 *= require Entry
 *= require Log
 *= require_self
