--- a/app/assets/stylesheets/Dashboard-add.css
+++ b/app/assets/stylesheets/Dashboard-add.css
@@ -1,3 +1,12 @@
+.dashboard-add-page{
+    position:absolute;
+    top:0px;
+    left:0px;
+    right:0px;
+    bottom:0px;
+    background-color:white;
+    display:none;
+}
 /********************************************************************************************************* 左边添加
 *******************************************************************************************************************/
 .dashboard-add-left-menu{
@@ -134,7 +143,7 @@
 .dashboard-name>i{
     float:left;
     pointer-events:auto;
-    margin-top:6px;
+    margin-top:2px;
     transition:color 0.25s ease-out;
     color:rgba(0,0,0,0.5);
     position:absolute;
