--- a/app/assets/stylesheets/Log.css
+++ b/app/assets/stylesheets/Log.css
@@ -94,6 +94,7 @@
     -webkit-border-radius:5px 0 0 5px;
     -moz-border-radius:5px 0 0 5px;
     line-height:17px;
+    top:0px;
 }
 .log-input>span>i{
     position:relative;
@@ -104,7 +105,9 @@
     position:absolute;
     left:53px;
     font-size:13px;
-    line-height: 17px
+    line-height: 17px;
+    top:0px;
+    margin:0px;
 }
 .log-btn-group>a:nth-of-type(2){
     position:relative;
@@ -144,7 +147,7 @@
     color:#a5daf5;
     display:block;
     text-align:center;
-    margin-top:30px;
+    margin-top:25px;
     text-shadow:1px 1px 1px rgba(0,0,0,0.6);
 }
 .login-in-btn:hover {
