--- a/app/assets/stylesheets/Dashboard.css
+++ b/app/assets/stylesheets/Dashboard.css
@@ -12,12 +12,24 @@
 }
 /********************************************************************************************************* dashboard item
 *******************************************************************************************************************/
+.dashboard-block{
+    top:62px;
+    left:21px;
+}
 .dashBoard-show{
     list-style-type: none;
 }
+.dashBoard-show>li{
+    border:1px solid #ddd;
+    padding:2px 0;
+    border-radius:3px;
+    -webkit-border-radius:3px;
+    -moz-border-radius:3px;
+}
 .dashboard-moreDetail{
-    padding:2px 3px;
+    padding:6px 7px;
     position:relative;
+    border-bottom:1px solid #ddd;
 }
 .dashboard-moreDetail>p{
     margin:0px;
@@ -26,14 +38,16 @@
     overflow:hidden;
     white-space:nowrap;
     font-size:16px;
-    color:rgba(0,0,0,0.6);
+    color:rgba(0,0,0,0.5);
 }
 .dashboard-moreDetail>i{
-    display:absolute;
-    right:2px;
+    position:absolute;
+    top:8px;
+    right:6px;
     pointer-events:auto;
-    color:rgba(0,0,0,0.6);
-    transition:color 0.25s ease-out;
+    color:rgba(0,0,0,0.15);
+    cursor:pointer;
+    transition:color 0.35s ease-out;
 }
 .dashboard-moreDetail>i:hover{
     color:rgba(0,0,0,0.9);
