--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -198,7 +198,7 @@
     </div>
     -->
     <div class="manage-btn-group" id="manage-btn-group">
-      <a class="btn btn-primary" id="db-add-show"><i class="icon-plus"></i> Dashboard</a>
+      <a class="btn btn-primary db-add-show" id="db-add-show"><i class="icon-plus"></i> Dashboard</a>
       <p id="manage-edit-target" ></p>
       <i class="icon-pencil"></i>
       <input type="text"/>
