--- a/app/assets/stylesheets/Analytic-main.css
+++ b/app/assets/stylesheets/Analytic-main.css
@@ -22,7 +22,9 @@
     width: 250px;
     float: left;
 }
-
+.index-condition-group:first-of-type{
+    width:280px;
+}
 .index-condition-group:nth-of-type(2) {
     width: 260px;
 }
