tesla lee +finish dashboard version 1

--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -205,7 +205,7 @@
       <span>Enter:Confirm&nbsp;&nbsp;&nbsp;&nbsp;Esc:Cancel</span>
     </div>
 
-    <div class="dashboard-block gridster manage-btn-group" style="width: 80%">
+    <div class="dashboard-block gridster manage-btn-group">
       <ul class="dashBoard-show" id="dashBoard-show">
 
       </ul>
