--- a/app/assets/stylesheets/_epm_base.css
+++ b/app/assets/stylesheets/_epm_base.css
@@ -258,27 +258,101 @@ nav ul li a:hover .nav-entry-kpi{
     font-size:14px;
     padding:0px;
     text-align:center;
+    color:#5fa9da;
 }
 .date-picker-shortcut:hover{
     background-color:#eee
 }
-.date-picker-shortcut[interval='hour']:after{
-    content:'last 24 hours';
+.date-picker-shortcut:after{
+   content:'Dynamic Date Pick';
 }
-.date-picker-shortcut[interval='day']:after{
-    content:'last 7 days';
+/*.date-picker-shortcut[interval='hour']:after{*/
+    /*content:'last 24 hours';*/
+/*}*/
+/*.date-picker-shortcut[interval='day']:after{*/
+    /*content:'last 7 days';*/
+/*}*/
+/*.date-picker-shortcut[interval='week']:after{*/
+    /*content:'last 4 weeks';*/
+/*}*/
+/*.date-picker-shortcut[interval='month']:after{*/
+    /*content:'last 3 months';*/
+/*}*/
+/*.date-picker-shortcut[interval='quarter']:after{*/
+    /*content:'last 4 quarters';*/
+/*}*/
+/*.date-picker-shortcut[interval='year']:after{*/
+    /*content:'last 3 years';*/
+/*}*/
+.date-picker-shortcut+i{
+    float:right;
+    position:absolute;
+    bottom:13px;
+    right:16px;
+    color:rgba(0,0,0,0.55);
+
 }
-.date-picker-shortcut[interval='week']:after{
-    content:'last 4 weeks';
+.table-condensed tfoot{
+    position:relative
 }
-.date-picker-shortcut[interval='month']:after{
-    content:'last 3 months';
+.date-pick-dynamic{
+    background-color:white;
+    border:1px solid rgba(0, 0, 0, 0.2);
+    border-radius:5px;
+    -moz-border-radius:5px;
+    -webkit-border-radius:5px;
+    box-shadow: 9px 5px 10px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 9px 5px 10px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 9px 5px 10px rgba(0, 0, 0, 0.2);
+    position:absolute;
+    left:230px;
+    bottom:-1px;
+    padding:8px;
+    display:none;
+    /*width:150px;*/
 }
-.date-picker-shortcut[interval='quarter']:after{
-    content:'last 4 quarters';
+.date-pick-dynamic[interval="week"]{
+    left:257px;
 }
-.date-picker-shortcut[interval='year']:after{
-    content:'last 3 years';
+.date-pick-dynamic>i{
+    position:absolute;
+    right:5px;
+    top:3px;
+    pointer-events:auto;
+    color:rgba(0,0,0,0.4);
+    transition:color 0.35s ease-out;
+    cursor:pointer;
+    font-size:15px;
+    z-index:10;
+}
+.date-pick-dynamic>div{
+    position:relative;
+    width:100px ;
+    padding:10px 20px 0;
+}
+.date-pick-dynamic>div>p{
+    display:inline;
+    font-size:25px;
+    color:rgba(0,0,0,0.4);
+    position:absolute;
+    top:19px;
+}
+.date-pick-dynamic>div>input[type='text']{
+    width:35px;
+    padding:5px 2px;
+    float:right;
+}
+.date-pick-dynamic>div>select{
+    clear:both;
+    margin:5px 0 25px;
+    padding:4px 5px 4px 2px;
+    background-color:white;
+    border:1px solid #ddd;
+    font-size:14px;
+    color:rgba(0,0,0,0.7);
+}
+.date-pick-dynamic>a{
+    padding:6px 10px !important;
 }
 /************************************************* date input
 ********************************************************************/
