--- a/app/assets/stylesheets/_epm_base.css
+++ b/app/assets/stylesheets/_epm_base.css
@@ -409,3 +409,13 @@ nav ul li a:hover .nav-entry-kpi{
     background:white !important;
     border-left:none !important;
 }
+/********************************************************************************************************* get start
+*******************************************************************************************************************/
+.get-start-middle{
+    position:absolute;
+    top:135px;
+    left:0px;
+    right:0px;
+    bottom:0px;
+    overflow-y:auto;
+}
