--- a/app/assets/stylesheets/Dashboard-add.css
+++ b/app/assets/stylesheets/Dashboard-add.css
@@ -183,6 +183,7 @@
     border:1px solid #5FA9DA !important;
     display:none;
     font-family:"open-sans";
+    font-size:13px;
 }
 /***************************************************** 切换时间
 *****************************************************************/
