--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -86,7 +86,7 @@
             <input type="radio" name="edit-user-role" data-name="Administrator" data-role="4" value="400">
             Administrator
         </label>
-        <input type="submit" value="Edit" class="btn btn-primary" id="manage-user-edit-old"/>
+        <input type="submit" value="Ok" class="btn btn-primary" id="manage-user-edit-old"/>
     </div>
 </div>
 
