--- a/app/views/entities/_left_menu.html.erb
+++ b/app/views/entities/_left_menu.html.erb
@@ -1,6 +1,6 @@
 
 <ul class="manage-left-menu" id="manage-left-menu" type="group">
-    <li>Manage User</li>
+    <li>管理用户</li>
     <li id="manage-menu-add">
         <input type="text"/>
 
