--- a/app/views/entity_groups/_left_menu.html.erb
+++ b/app/views/entity_groups/_left_menu.html.erb
@@ -1,8 +1,8 @@
 <ul class="manage-left-menu" id="manage-left-menu" type="entity">
-    <li>Manage View</li>
+    <li>管理观察点</li>
     <li id="manage-menu-add">
         <input type="text"/>
-        <span><i class="icon-plus"></i> View</span>
+        <span><i class="icon-plus"></i> 观察点</span>
         <p class="manage-add-tooltip">Enter: confirm <br/>Esc: cancel</p>
     </li>
     <%@entity_groups.each do |entity_group|%>
