--- a/app/views/entity_groups/index.html.erb
+++ b/app/views/entity_groups/index.html.erb
@@ -2,7 +2,7 @@
 <div class="manage-user-add" id="manage-entity-add" special="entity">
      <i class="icon-remove" id="close-add-entity" ></i>
      <p>
-          Entity List
+          部门列表
      </p>
      <ul>
           <%@entities.each do |entity|%>
@@ -14,7 +14,7 @@
 </div>
 <div class="manage-right-content" id="manage-right-content">
      <div class="manage-btn-group" id="manage-btn-group" special="view">
-          <a class="btn btn-primary" id="entity-add-show"><i class="icon-plus"></i>Choose Entity</a>
+          <a class="btn btn-primary" id="entity-add-show"><i class="icon-plus"></i>选择部门</a>
           <p id="manage-edit-target" ></p>
           <i class="icon-pencil"></i>
           <input type="text"/>
