--- a/app/assets/stylesheets/Log.css
+++ b/app/assets/stylesheets/Log.css
@@ -1,20 +1,20 @@
-.log-general{
-    background-color:#e8e8e8;
-    width:100%;
-    height:100%;
-}
-.log-general>header{
-    height:133px;
-    width:100%;
-    background-color:#8e8e8e;
-}
-.log-logo{
+/*.log-general{*/
+    /*background-color:#e8e8e8;*/
+    /*width:100%;*/
+    /*height:100%;*/
+/*}*/
+/*.log-general>header{*/
+    /*height:133px;*/
+    /*width:100%;*/
+    /*background-color:#8e8e8e;*/
+/*}*/
+/*.log-logo{*/
     /*background:url("../images/log.png") -6px -129px no-repeat;*/
-    background:url("/assets/log.png") -6px -129px no-repeat;
-    height:133px;
-    width:150px;
-    margin-left:20px;
-}
+    /*background:url("/assets/log.png") -6px -129px no-repeat;*/
+    /*height:133px;*/
+    /*width:150px;*/
+    /*margin-left:20px;*/
+/*}*/
 /*.log-logo:after{*/
     /*content:url('../images/logo-after.png');*/
     /*content:url('/assets/logo-after.png');*/
@@ -23,148 +23,285 @@
     /*top:8px;*/
 
 /*}*/
-.log-header-image{
+/*.log-header-image{*/
     /*background:url("../images/log.png") right 0 no-repeat;*/
-    background:url("/assets/log.png") right 0 no-repeat;
-    height:133px;
-    width:100%;
-    position:relative;
-    box-shadow:0 5px 10px rgba(0,0,0,0.7);
-    -moz-shadow:0 5px 10px rgba(0,0,0,0.7);
-    -webkit-shadow:0 5px 10px rgba(0,0,0,0.7);
-}
-.log-header-image>a{
-    display:inline-block;
-    position:absolute;
-    margin:0;
-    right:148px;
-    bottom:27px;
-    font-size:20px;
-    font-weight:lighter;
-    color:#d9d9d9;
-    cursor:pointer;
-}
-.log-header-image>a:first-letter{
-    color:#55c8b4;
-}
-.log-header-image>a:hover{
-    color:white
-}
-.log-header-image>.language-select{
-    position:absolute;
-    bottom:25px;
-    right:15px;
-}
-/********************************************************************************************************* log body
-*******************************************************************************************************************/
-.log-btn-group{
-    position:relative;
-    top:150px;
-    width:358px;
-    height:130px;
-    left:50%;
-    margin-left:-179px;
-}
-.log-input{
-    position:relative;
-    width:250px;
-}
-.log-input:first-of-type{
-    top:0px;
-}
-.log-input:nth-of-type(2){
-    top:50px;
-}
-.log-input:nth-of-type(3){
-    top:100px;
-}
-.log-input:nth-of-type(4){
-    top:150px;
-}
-.log-input>span{
-    color:#ddd;
-    background-color:#8e8e8e;
-    width:55px;
-    height:33px;
-    text-align:center;
-    position:absolute;
-    z-index:10;
-    font-size:18px;
-    border-radius:5px 0 0 5px;
-    -webkit-border-radius:5px 0 0 5px;
-    -moz-border-radius:5px 0 0 5px;
-    line-height:17px;
-    top:0px;
-}
-.log-input>span>i{
-    position:relative;
-    top:7px;
-}
-.log-input>input{
-    width:190px;
-    position:absolute;
-    left:53px;
-    font-size:13px;
-    line-height: 17px;
-    top:0px;
-    margin:0px;
-}
-.log-btn-group>a:nth-of-type(2){
-    position:relative;
-    top:100px;
-    font-size:13px;
-    padding-left:2px;
-    color:#9d9d9d;
-    transition:color 0.25s ease-out;
-    cursor:pointer;
-    dispaly:inline-block;
-}
-.log-btn-group>a:nth-of-type(2):hover{
-    color:#484848
-}
-.log-btn-group>a:first-of-type{
+    /*background:url("/assets/log.png") right 0 no-repeat;*/
+    /*height:133px;*/
+    /*width:100%;*/
+    /*position:relative;*/
+    /*box-shadow:0 5px 10px rgba(0,0,0,0.7);*/
+    /*-moz-shadow:0 5px 10px rgba(0,0,0,0.7);*/
+    /*-webkit-shadow:0 5px 10px rgba(0,0,0,0.7);*/
+/*}*/
+/*.log-header-image>a{*/
+    /*display:inline-block;*/
+    /*position:absolute;*/
+    /*margin:0;*/
+    /*right:148px;*/
+    /*bottom:27px;*/
+    /*font-size:20px;*/
+    /*font-weight:lighter;*/
+    /*color:#d9d9d9;*/
+    /*cursor:pointer;*/
+/*}*/
+/*.log-header-image>a:first-letter{*/
+    /*color:#55c8b4;*/
+/*}*/
+/*.log-header-image>a:hover{*/
+    /*color:white*/
+/*}*/
+/*.log-header-image>.language-select{*/
+    /*position:absolute;*/
+    /*bottom:25px;*/
+    /*right:15px;*/
+/*}*/
+/********************************************************************************************************* log body*/
+/********************************************************************************************************************/
+/*.log-btn-group{*/
+    /*position:relative;*/
+    /*top:150px;*/
+    /*width:358px;*/
+    /*height:130px;*/
+    /*left:50%;*/
+    /*margin-left:-179px;*/
+/*}*/
+/*.log-input{*/
+    /*position:relative;*/
+    /*width:250px;*/
+/*}*/
+/*.log-input:first-of-type{*/
+    /*top:0px;*/
+/*}*/
+/*.log-input:nth-of-type(2){*/
+    /*top:50px;*/
+/*}*/
+/*.log-input:nth-of-type(3){*/
+    /*top:100px;*/
+/*}*/
+/*.log-input:nth-of-type(4){*/
+    /*top:150px;*/
+/*}*/
+/*.log-input>span{*/
+    /*color:#ddd;*/
+    /*background-color:#8e8e8e;*/
+    /*width:55px;*/
+    /*height:33px;*/
+    /*text-align:center;*/
+    /*position:absolute;*/
+    /*z-index:10;*/
+    /*font-size:18px;*/
+    /*border-radius:5px 0 0 5px;*/
+    /*-webkit-border-radius:5px 0 0 5px;*/
+    /*-moz-border-radius:5px 0 0 5px;*/
+    /*line-height:17px;*/
+    /*top:0px;*/
+/*}*/
+/*.log-input>span>i{*/
+    /*position:relative;*/
+    /*top:7px;*/
+/*}*/
+/*.log-input>input{*/
+    /*width:190px;*/
+    /*position:absolute;*/
+    /*left:53px;*/
+    /*font-size:13px;*/
+    /*line-height: 17px;*/
+    /*top:0px;*/
+    /*margin:0px;*/
+/*}*/
+/*.log-btn-group>a:nth-of-type(2){*/
+    /*position:relative;*/
+    /*top:100px;*/
+    /*font-size:13px;*/
+    /*padding-left:2px;*/
+    /*color:#9d9d9d;*/
+    /*transition:color 0.25s ease-out;*/
+    /*cursor:pointer;*/
+    /*dispaly:inline-block;*/
+/*}*/
+/*.log-btn-group>a:nth-of-type(2):hover{*/
+    /*color:#484848*/
+/*}*/
+/*.log-btn-group>a:first-of-type{*/
     /*background-image:url("../images/log.png");*/
-    background-image:url("/assets/log.png");
-    background-repeat:no-repeat;
-    display:block;
-    width:87px;
-    height:84px;
+    /*background-image:url("/assets/log.png");*/
+    /*background-repeat:no-repeat;*/
+    /*display:block;*/
+    /*width:87px;*/
+    /*height:84px;*/
+    /*position:relative;*/
+    /*float:right;*/
+    /*top:2px;*/
+    /*cursor:pointer;*/
+/*}*/
+/*.log-btn-group>a:first-of-type[special="log-out"]{*/
+    /*top:105px;*/
+    /*left:13px;*/
+/*}*/
+/*.login-in-btn{*/
+    /*background-position: -204px -150px;*/
+/*}*/
+/*.login-in-btn:after{*/
+    /*content:"logIn";*/
+    /*font-size:22px;*/
+    /*color:#a5daf5;*/
+    /*display:block;*/
+    /*text-align:center;*/
+    /*margin-top:25px;*/
+    /*text-shadow:1px 1px 1px rgba(0,0,0,0.6);*/
+/*}*/
+/*.login-in-btn:hover {*/
+    /*background-position: -468px -149px;*/
+/*}*/
+/*.login-out-btn{*/
+    /*background-position: -338px -150px;*/
+/*}*/
+/*.login-out-btn:after{*/
+    /*content:"signUp";*/
+    /*font-size:20px;*/
+    /*color:#f5bea5;*/
+    /*display:block;*/
+    /*text-align:center;*/
+    /*margin-top:30px;*/
+    /*text-shadow:1px 1px 1px rgba(0,0,0,0.6);*/
+/*}*/
+/*.login-out-btn:hover{*/
+    /*background-position: -596px -151px;*/
+/*}*/
+
+
+
+
+.login-bg{
+    position:absolute;
+    top:0px;
+    bottom:0;
+    left:0;
+    right:0;
+    background:url("../images/login-bg2.jpg")no-repeat center black
+}
+.log-btn{
+    background: none repeat scroll 0 0 rgba(255, 255, 255, 0.35);
+    border: 2px solid rgba(255, 255, 255, 0.4);
+    border-radius: 5px 5px 5px 5px;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 14px;
+    font-weight: 500;
+    padding: 9px 22px 7px;
+    text-decoration: none;
+    transition: background-color 0.35s ease 0s,color 0.35s ease 0s;
+    font-family:"open-sans",Arial;
+}
+.log-btn:hover{
+    background-color:rgba(0,0,0,0);
+}
+.login-caption{
+    position:absolute;
+    width:800px;
+    margin-left:-400px;
+    left:50%;
+    top:13%;
+    color:white;
+
+}
+.login-caption h3{
+    font-size:70px;
+    text-shadow:3px 2px 5px #444;
+    padding-bottom:15px;
+    border-bottom:3px solid white;
+    margin-bottom:10px;
+    font-family:"maven",Arial;
+    text-align:center;
+}
+
+.login-caption p{
+    font-weight:lighter;
+    color:white;
+    text-align:center;
+    font-size:19px;
+    text-shadow:2px 2px 2px #222;
+    margin-bottom:30px;
+    font-family:"open-sans",Arial;
+}
+.log-btn.login-recommend{
+    background-color:transparent;
+    display:table;
+    margin:0px auto;
+    padding:11px 27px;
+    font-size:18px;
+    font-family:"oprn-sans",Arial
+}
+.log-btn.login-recommend:hover{
+    border-color:black;
+    color:black;
+}
+.login-block{
+    width:100%;
+    height:100px;
+    position:fixed;
+    bottom:0;
+    background:rgba(0,0,0,0.85)
+}
+.login-operate{
+    width:223px;
+    margin:30px auto 0px;
+}
+.login-operate a{
+    margin-right:-11px;
+}
+.signShow-block{
+    width:350px;
+    padding:10px;
+    position:absolute;
+    margin-left:-175px;
+    left:50%;
+    bottom:100px;
+    background-color:rgba(255,255,255,0.9);
+    border-radius:5px 5px 0 0;
+    -moz-border-radius:5px 5px 0 0;
+    -webkit-border-radius:5px 5px 0 0;
+}
+.signShow-block dt{
+    float:left;
+    height:35px;
+    line-height:38px;
+    text-align:right;
+    margin-right:10px;
+    width:75px;
+    margin-left:7px;
+    color:#777;
+    font-size:14px;
+}
+.signShow-block[special='sign-up'] dt:nth-of-type(3){
+    line-height:16px;
+    font-size:14px;
+}
+.signShow-block[special='sign-up'] dt:nth-of-type(3)>span{
     position:relative;
-    float:right;
+    left:-3px;
     top:2px;
-    cursor:pointer;
+    font-size:13px;
 }
-.log-btn-group>a:first-of-type[special="log-out"]{
-    top:105px;
-    left:13px;
+.signIn-block{
+    height:250px;
 }
-.login-in-btn{
-    background-position: -204px -150px;
+.signIn-block>h3{
+    color:#555;
 }
-.login-in-btn:after{
-    content:"logIn";
-    font-size:22px;
-    color:#a5daf5;
-    display:block;
+.signIn-block[special='sign-up']{
+    height:350px;
+}
+
+.login-btn{
+    width:121px;
+    margin-left:93px;
+    background: none repeat scroll 0 0 rgba(56, 194, 109, 0.65);
+    border: 2px solid rgba(56, 194, 109, 0.4);
     text-align:center;
-    margin-top:25px;
-    text-shadow:1px 1px 1px rgba(0,0,0,0.6);
 }
-.login-in-btn:hover {
-    background-position: -468px -149px;
-}
-.login-out-btn{
-    background-position: -338px -150px;
-}
-.login-out-btn:after{
-    content:"signUp";
-    font-size:20px;
-    color:#f5bea5;
-    display:block;
-    text-align:center;
-    margin-top:30px;
-    text-shadow:1px 1px 1px rgba(0,0,0,0.6);
-}
-.login-out-btn:hover{
-    background-position: -596px -151px;
+.login-btn:hover{
+    background-color:rgba(0,0,0,0);
+    color:rgba(56, 194, 109, 0.65)
 }
