--- a/app/views/layouts/non_authorized.html.erb
+++ b/app/views/layouts/non_authorized.html.erb
@@ -7,7 +7,8 @@
           <%= csrf_meta_tags %>
      </head>
      <body>
-          <article class="wrap-main">
+     <%= render :partial=>'shares/message_box'%>
+          <!--<article class="wrap-main">
                <div class="log-general">
                     <header>
                          <div class="log-header-image">
@@ -28,8 +29,8 @@
                     </div>
                </div>
           </article>
+     -->
 
-          <%= render :partial=>'shares/message_box'%>
 
      </body>
      <script type="text/javascript">
