--- a/app/assets/stylesheets/Manage-kpi.css
+++ b/app/assets/stylesheets/Manage-kpi.css
@@ -73,7 +73,8 @@
     z-index:10;
     left:-999em;
     width:90%;
-    top:-11px;
+    top:-7px;
+    padding:7px 5px 5px;
 }
 /********************************************************************************************************* 添加 KPI
 *******************************************************************************************************************/
